--- a/src/frontend/viz.html
+++ b/src/frontend/viz.html
@@ -58,9 +58,9 @@
     <div class="east">
         BEN
     </div>
-</div>
-    <div id="east">
-        <div class="suit">
+  </div>
+  <div id="east">
+      <div class="suit">
           <span>&spades;</span>
       </div>
       <div class="suit">
@@ -136,21 +136,25 @@
                                 const log = JSON.parse(xhr.responseText);
                                 let deal = new Deal(log)
                                 deal.start(deal.bids)
-                                if (deal.data.human) {
-                                    if (deal.data.human[0]) document.querySelector('.north').innerHTML = deal.data.player
-                                    if (deal.data.human[1]) document.querySelector('.east').innerHTML = deal.data.player
-                                    if (deal.data.human[2]) document.querySelector('.south').innerHTML = deal.data.player
-                                    if (deal.data.human[3]) document.querySelector('.west').innerHTML = deal.data.player
-                                }
                                 if (deal.data.opponents) {
                                     if (deal.data.seat == "North"  || deal.data.seat == "South") {
+                                        document.querySelector('.north').innerHTML = deal.data.partner
+                                        document.querySelector('.south').innerHTML = deal.data.partner
                                         document.querySelector('.east').innerHTML = deal.data.opponents
                                         document.querySelector('.west').innerHTML = deal.data.opponents
                                     }
                                     else {
                                         document.querySelector('.north').innerHTML = deal.data.opponents
                                         document.querySelector('.south').innerHTML = deal.data.opponents
+                                        document.querySelector('.east').innerHTML = deal.data.partner
+                                        document.querySelector('.west').innerHTML = deal.data.partner
                                     }
+                                }
+                                if (deal.data.human) {
+                                    if (deal.data.human[0]) document.querySelector('.north').innerHTML = deal.data.player
+                                    if (deal.data.human[1]) document.querySelector('.east').innerHTML = deal.data.player
+                                    if (deal.data.human[2]) document.querySelector('.south').innerHTML = deal.data.player
+                                    if (deal.data.human[3]) document.querySelector('.west').innerHTML = deal.data.player
                                 }
                                 if (deal.data.feedback) {
                                     document.querySelector('#feedback').innerHTML = deal.data.feedback
