Fixed error when "discarding" when we have a trump. Fixed that a sample has the same pips, when using DD in different bidding sequences. Update seed at each bid, to be able to compare api and table_manager_client. Added new feature to get samples from previous bidding round

--- a/demo/viz.html
+++ b/demo/viz.html
@@ -152,7 +152,7 @@
 
         let i = 0
         log['bids'].forEach(data => {
-            document.querySelector('#info').innerHTML += `
+            document.querySelector('#info').innerHTML += `<br>
             <p class="bid"><strong>Bid:</strong> ${data.bid}${data.alert=="True"? "*":""} ${data.who !== undefined ? ' by ' + data.who : ''}</p>
             `;
             if (data.candidates && data.candidates.length > 0)
