--- a/src/frontend/api.html
+++ b/src/frontend/api.html
@@ -591,7 +591,7 @@
             if (data.explanation) {
                 explanation = ` (${data.explanation})`;
             }
-            let html = `
+            let html = `<br>
                 <p class="bid"><strong>Bid:</strong> ${data.bid}${alerted} ${explanation} ${data.who !== undefined ? ' by ' + data.who : ''}</p>
                 `;
             if (data.candidates && data.candidates.length > 0)
