Updated when SuitC should decide the play. Minor updates in sampling

--- a/src/frontend/viz.html
+++ b/src/frontend/viz.html
@@ -190,7 +190,7 @@
                                     '&P=1&board_no=' + deal.board_number() + '&A=x&T=2"> Let BEN bid and play it again.</a><br>';
                                 rebidContent += '<a href="/app/bridge.html?deal=' +
                                     '(\'' + deal.data.hands + '\', \'' + dealer + ' ' + vul + '\')' +
-                                    '&P=1&board_no=' + deal.board_number() + '&S=x&A=x&T=2"> Bid and play it again as South.</a><br>';
+                                    '&P=1&board_no=' + deal.board_number() + '&S=x&A=x&T=2&name=Human"> Bid and play it again as South.</a><br>';
 
                                 document.querySelector('#rebid').innerHTML = rebidContent;
 
