--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,6 +5,7 @@
     <title>Bridge Engine Demo</title>
     <script src="log.js"></script> 
     <link rel="stylesheet" href="viz.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
