--- a/demo/viz.html
+++ b/demo/viz.html
@@ -7,8 +7,10 @@
   <title>Analyze Deal</title>
 
   <link rel="stylesheet" href="viz.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script src="log.js"></script> 
   <script src="viz.js"></script>  
+  <script src="samplesTable.js"></script>
 
 </head>
 
@@ -174,13 +176,9 @@
                 <p><strong>HCP:</strong> ${data.hcp.join(' - ')}</p>
                 <p><strong>Shape:</strong> ${data.shape.join('-')}</p>
                 `;
-            if (data.samples && data.samples.length > 0)
-                document.querySelector('#info').innerHTML += `
-                    <h3 class="samples"  onclick="toggleSamples('sampleLines${i}')"><strong>Samples(${data.samples.length}):</strong></h3>
-                    <div id="sampleLines${i}" class="hidden">
-                    <ul>${data.samples.map(sample => `<li>${sample.replace(/\n/g,"<br>")}</li>`).join('')}</ul>
-                    </div>
-                    `;
+            if ("samples" in data) {
+                document.querySelector('#info').innerHTML += generateSamplesTable(data.samples);
+            }
             i += 1;
         }
         );
