--- a/src/frontend/bridge.html
+++ b/src/frontend/bridge.html
@@ -28,6 +28,9 @@
 </head>
 
 <body>
+    <div class="center">
+        <h1>Play with BEN. Version 0.8.6.0</h1>
+    </div>    
 <div id="loader"></div> 
 <!-- HTML for the dialog -->
 <div id="customDialog" title="Feedback">
