--- a/demo/viz.html
+++ b/demo/viz.html
@@ -155,7 +155,7 @@
         }
 
 
-        let i = 0
+        let bids = 0
         log['bids'].forEach(data => {
             document.querySelector('#info').innerHTML += `<br>
             <p class="bid"><strong>Bid:</strong> ${data.bid}${data.alert=="True"? "*":""} ${data.who !== undefined ? ' by ' + data.who : ''} ${data.explanation !== undefined ? data.explanation : ''}</p>
@@ -180,9 +180,9 @@
                 <p><strong>Shape:</strong> ${data.shape.join('-')}</p>
                 `;
             if ("samples" in data) {
-                document.querySelector('#info').innerHTML += generateSamplesTable(data.samples);
+                document.querySelector('#info').innerHTML += generateSamplesTable(data.samples, bids);
+                bids += 1
             }
-            i += 1;
         }
         );
 
