--- a/src/frontend/viz.html
+++ b/src/frontend/viz.html
@@ -256,7 +256,7 @@
                                     }
                                     if ("samples" in data) {
                                         document.querySelector('#info').innerHTML += generateSamplesTable(data.samples, bids);
-                                        bids = +1
+                                        bids += 1
                                     }
                                     }
                                 );
